[package]
name = "gemini-processor"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
zip = "0.6"
regex = "1.10"
lazy_static = "1.4"
console_error_panic_hook = { version = "0.1.7", optional = true }
wee_alloc = { version = "0.4.5", optional = true }

[dependencies.web-sys]
version = "0.3"
features = [
  'console',
  'DomParser',
  'Document',
  'Element',
  'Node',
  'NodeList',
  'Text',
  'HtmlCollection',
  'HtmlElement'
]

[profile.release]
opt-level = "s"